<resources>
    <string name="app_name">AsistenteDocumental</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">iniciar Seccion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"bienvenido !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="client_proyect">Cliente</string>
    <string name="id_proyect">Identificaion</string>
    <string name="ref_proyect">Numero de Referencia</string>
    <string name="name_proyect">Nombre del Proyecto</string>
    <string name="doc_proyect">Documentación</string>
    <string name="doc_plan_elc">Planos eléctricos</string>
    <string name="doc_memory">Memorias de cálculo</string>
    <string name="doc_cer">Certificados de conformidad de productos eléctricos en digital</string>
    <string name="doc_dec">"Declaración de cumplimiento "</string>
    <string name="doc_copy">Copia de la matrícula profesional del diseñador</string>
    <string name="doc_asign">Asignación proyecto</string>
    <string name="pr_hv">Hoja de vida</string>
    <string name="pr_pre">Preliminar</string>
    <string name="pr_imparcialiti">Imparcialidad</string>
    <string name="resp_obs">OBSERVACIONES</string>
    <string name="resp_obs_adc">Observaciones Adicionales</string>
    <string name="firma">firma</string>
    <string name="new_proyect">Nuevo proyecto</string>
    <string name="pr_list_res_ground">LISTA DE RESULTADOS DE MEDICION DE PUESTA A TIERRA</string>
    <string name="pr_list_res_cont">LISTA DE RESULTADOS DE MEDICIÓN DE CONTINUIDAD</string>
    <string name="pr_list_res_var">LISTA DE RESULTADOS DE MEDICIÓN DE VARIABLES ELECTRICAS</string>
    <string name="pr_rev_cert">REVISIÓN DE MATERIALES Y CERTIFICADOS DE PRODUCTO PARA RETIE</string>
    <string name="pr_ok">APROBAR</string>
    <string name="pr_list_ver_end">LISTA DE VERIFICACIÓN DE INSTALACIONES DE USO FINAL</string>
    <string name="pr_list_ver">LISTA VERIFICACIÓN DE REQUISITOS ESENCIALES</string>
    <string-array name="resp_cumple">
        <item>NO CUMPLE</item>
        <item>CUMPLE</item>
        <item>NO APLICA</item>
    </string-array>
    <string-array name="resp_ok">
        <item>Ok</item>
        <item>N.A.</item>
        <item>No</item>
    </string-array>
    <string-array name="resp_result">
        <item>APROBADO</item>
        <item>NO APROBADO</item>
    </string-array>
    <string name="l_esen1">DISPOSICIONES GENERALES</string>
    <string name="l_esen1_1">Verificar la aplicabilidad del objeto fundamental de este reglamento el cual es establecer las medidas tendientes a garantizar la seguridad de las personas, de la vida tanto animal como vegetal y la preservación del medio ambiente; previniendo, minimizando o eliminando los riesgos de origen eléctrico.</string>
    <string name="l_esen1_2">Verificar que toda instalación objeto del RETIE demuestre su cumplimiento mediante la Declaración de Cumplimiento suscrita por quien realice directamente la construcción, la remodelación o ampliación de la instalación eléctrica.</string>
    <string name="l_esen1_3">Verificar que los productos usados en las instalaciones eléctricas objeto del RETIE y que estén listados en el Tabla 2.1, deben demostrar la conformidad con el RETIE mediante un Certificado de Conformidad de Producto expedido por un organismo de certificación acreditado, tal como se establece en el Capítulo 10</string>
    <string name="l_esen1_4">Verificar que para efectos del presente reglamento y mayor información, se utilicen las abreviaturas, acrónimos y siglas más comúnmente utilizadas en el Sector Eléctrico</string>
    <string name="l_esen2">SISTEMA DE UNIDADES.</string>
    <string name="l_esen2_1">Verificar que en las instalaciones objeto del presente reglamento se aplique el Sistema Internacional de Unidades (SI) especificado en la Tabla 5.1. del Retie</string>
    <string name="l_esen3">SIMBOLOGIA Y SEÑALIZACIÓN</string>
    <string name="l_esen3_1">Símbolos Eléctricos</string>
    <string name="l_esen3_1_1">Verificar la aplicación de los símbolos gráficos contemplados en la Tabla 6.1. Cuando se requieran otros símbolos se pueden tomar de las normas precitadas.</string>
    <string name="l_esen3_1_2">Verificar que donde se precise el símbolo de riesgo eléctrico en señalización de seguridad, se conservar las proporciones de las dimensiones, según la tabla 6.2 del Retie. Se podrán aceptar tolerancias de ± 10% de los valores señalados</string>
    <string name="l_esen3_2">Señalizacion de seguridad</string>
    <string name="l_esen3_2_1">Verificar que los requisitos de señalización del artículo 6.2 se cumplan. Su escritura debe ser en idioma castellano y deben localizarse en sitios visibles que permitan cumplir su objetivo. El uso de las señales de riesgo adoptadas en el presente reglamento será de obligatorio cumplimiento, a menos que alguna norma de mayor jerarquía legal exija algo diferente, en tal caso las empresas justificarán la razón de su no utilización.</string>
    <string name="l_esen3_2_2">Verificar que las señales de seguridad apliquen las formas geométricas y los colores de la Tabla 6.3. Verificar que las dimensiones de las señales permitan ver y captar el mensaje a distancias razonables del elemento o área sujeta al riesgo.</string>
    <string name="l_esen3_3">Código de colores para conductores</string>
    <string name="l_esen3_3_1">Verificar que se cumpla el código de colores para conductores aislados de potencia, establecido en las Tablas 6.5 y 6.6. Se tomará como válido para determinar este requisito el color propio del acabado exterior del conductor o una marcación clara en las partes visibles, con pintura, con cinta o rótulos adhesivos del color respectivo. Este requisito igualmente aplica a conductores desnudos, que actúen como barrajes en instalaciones interiores y no para los conductores utilizados en instalaciones a la intemperie diferentes a la acometida.</string>
    <string name="l_esen4">COMUNICACIONES PARA COORDINACIÓN DE TRABAJOS ELÉCTRICOS</string>
    <string name="l_esen4_1">Verificar que toda empresa de servicios públicos tenga un sistema de comunicaciones con protocolos aprobados que garanticen la mayor seguridad y confiabilidad. En el caso de que la empresa no posea un sistema de comunicaciones seguro para la ejecución de maniobras por radio, debe adoptar el Código Q.</string>
    <string name="l_esen5">ANÁLISIS DE RIESGOS DE ORIGEN ELÉCTRICO</string>
    <string name="l_esen5_1">Verificar que con el fin de evaluar el nivel o grado de riesgo de tipo eléctrico, se aplique la matriz de análisis de riesgos para la toma de decisiones de la Tabla 9.3 del Retie.</string>
    <string name="l_esen5_2">Verificar que para determinar la existencia de alto riesgo, la situación sea evaluada por un profesional competente en electrotecnia y basarse en los siguientes criterios: que existan condiciones peligrosas, que el peligro tenga un carácter inminente, que la gravedad sea máxima y que existan antecedentes comparables.</string>
    <string name="l_esen6">REQUERIMIENTOS GENERALES DE LAS INSTALACIONES ELÉCTRICAS</string>
    <string name="l_esen6_1">Diseño</string>
    <string name="l_esen6_1_1">Verificar que toda instalación eléctrica a la que le aplique el RETIE, cuente con un diseño realizado por un profesional o profesionales legalmente competentes para desarrollar esa actividad. El diseño puede ser detallado o simplificado según el tipo de instalación. También aplica los casos de Reemplazo de diseño. El diseñador deberá hacer mención expresa de aquellos ítems que a su juicio no apliquen</string>
    <string name="l_esen6_2">Intervención de Personas con las Competencias Profesionales</string>
    <string name="l_esen6_2_1">Verificar que la construcción, ampliación o remodelación de toda instalación eléctrica objeto del RETIE, debe ser dirigida, supervisada y ejecutada directamente por profesionales competentes, que según la ley les faculte para ejecutar esa actividad y deben cumplir con todos los requisitos del presente reglamento que le apliquen.</string>
    <string name="l_esen6_2_2">Verificar que los diseños de las instalaciones eléctricas deben propiciar que en la construcción de la instalación se cumplan todos los requerimientos del RETIE que le apliquen. Tanto las memorias de cálculo como los planos o diagramas deben contemplar en forma legible el nombre, apellidos y número de matrícula profesional de la persona o personas que actuaron en el diseño, quienes firmarán tales documentos y con la firma aceptan dar cumplimiento a los requerimientos del RETIE, en consecuencia serán responsables de los efectos derivados de la aplicación del diseño.</string>
    <string name="l_esen6_2_3">Verificar que el profesional competente responsable de la dirección o la construcción directa de la instalación eléctrica cumpla los requisitos de la sección 10.2.2 del Retie y estén registrados en el Registro de Productores e Importadores de Productos sujetos al cumplimiento de reglamentos técnicos de la SIC: contratación de personas calificadas, uso de productos certificados bajo Retie, verificación que el diseño cumpla Retie, declaración de cumplimiento, planos finales de construcción.</string>
    <string name="l_esen6_3">Productos</string>
    <string name="l_esen6_3_1">Verificar que la selección de los productos o materiales eléctricos y su instalación esté en función de la seguridad, su utilización e influencia del entorno, por lo que se deben tener en cuenta los criterios básicos del artículo 10.3 del Retie, además los exigidos en el artículo 20 del Anexo General.</string>
    <string name="l_esen6_4">Espacios</string>
    <string name="l_esen6_4_1">Verificar que los lugares donde se construya cualquier instalación eléctrica cuenten con los espacios suficientes para el montaje, operación y mantenimiento de equipos y demás componentes, de tal manera que se garantice la seguridad tanto de las personas como de la misma instalación.</string>
    <string name="l_esen6_4_2">Verificar que en subestaciones y cuartos eléctricos de media y baja tensión se cuente con puertas o espacios adecuados para la entrada o salida de los equipos, para efectos de su montaje inicial o posterior reposición. El ancho del ala de las puertas de acceso al espacio de trabajo no debe ser menor a 90 cm y en los cuartos donde se alojan transformadores de MT, las alas de las puertas deben abrir hacia fuera y disponer de cerradura antipánico, independiente de la potencia y de los equipos que albergan.</string>
    <string name="l_esen6_4_3">Verificar que cuando se tengan partes expuestas energizadas a menos de 150 V de un lado y conectadas a tierra en el otro, el espacio de trabajo mínimo no debe ser inferior a 1,9 m de altura o la altura del equipo cuando este sea más alto y 0,75 m de ancho o el ancho del equipo si este es mayor. En todo caso la profundidad del espacio de trabajo frente al equipo no debe ser inferior a 0,9 m</string>
    <string name="l_esen6_4_4">Verificar que cuando se tengan partes expuestas energizadas a tensión entre 2500 V y 9000 V a un lado y puesta tierra en el otro, el espacio de trabajo mínimo no debe ser inferior a 1,9 m de altura o la altura del equipo cuando este sea más alto y 0,9 m de ancho o el ancho del equipo si este es mayor. En estos casos, la profundidad del espacio de trabajo no debe ser inferior a 1,5 m</string>
</resources>